--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -118,13 +118,6 @@ h3 {
   }
 }
 
-// .navbar-icon {
-  // position: relative;
-  // width: 100%;
-  // height: 100%;
-  // display: inline-block;
-// }
-
 .navbar-icon path {
   stroke: $charcoal;
   stroke-width: 5;
@@ -194,13 +187,12 @@ h3 {
   text-align: center;
 }
 
-.content--position {
+.content--vw-100 {
   width: 100vw;
 }
 
 .content__p5 {
   height: 100vh;
-  display: flex;
 }
 
 .content__about {
@@ -277,32 +269,34 @@ h3 {
 
 .content__contact{
   max-width: 800px;
-  margin: 50vh auto;
-  // height: 100vh;
+  height: 100vh;
 }
 
-// todo: fix naming
-.contact-container {
+.link-container {
     margin-bottom: 20px;
-
-
 }
-  .contact-link {
+
+.contact-link {
+  color: $charcoal;
+  font-family: $heading-font;
+
+  &:focus {
     color: $charcoal;
-    font-family: $heading-font;
-
-    &:focus {
-      color: $charcoal;
-    }
-
-    &:hover {
-      color: $fuschia;
-    }
   }
+
+  &:hover {
+    color: $fuschia;
+  }
+}
 
 .container {
   display: flex;
   text-align: center;
+  // justify-content: space-between;
+}
+
+.container__center {
+  margin: auto auto;
 }
 
 .container--align-left {
@@ -335,23 +329,18 @@ $arrow-head-weight: $shaft-weight;
   -moz-osx-font-smoothing: grayscale;
 }
 
-// .container {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   height: 100%;
-// }
-
 ul {
+  padding: 0;
+
   li {
     margin: 0 0 24px;
     list-style-type: none;
   }
 }
-
 .arrow {
   width: $shaft-width;
   transition: all 0.2s;
+  
 
   >.shaft {
     background-color: $charcoal;
@@ -375,20 +364,27 @@ ul {
       transition-delay: 0;
     }
 
-    &:before {
-            // transform-origin: top right;
+    // &:before {
+    //         // transform-origin: top right;
 
-    }
+    // }
 
-    &:after {
-            // transform-origin: bottom right;
+    // &:after {
+    //         // transform-origin: bottom right;
 
-    }
+    // }
   }
 }
+////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////
+//////////////////////////////////////////
+//////////////////////////////////////////
+//////////////////////////////////////////
 
 .arrow__right {
-  top: 3px;
+  // top: 1px;
+  // display: inline-block;
+
 
   >.shaft {
     width: $shaft-width;
@@ -414,7 +410,6 @@ ul {
     }
   }
 }
-
 .arrow__left {
   position: absolute;
   top: 60%;
@@ -441,8 +436,14 @@ ul {
     }
   }
 }
+////////////////////////////////////////////////////////
+////////////////////////////////////////////////////////
+//////////////////////////////////////////
+//////////////////////////////////////////
+//////////////////////////////////////////
 
 .arrow__left--previous {
+
   >.shaft {
     width: $shaft-width;
     transition-delay: 0.2s;
@@ -453,7 +454,7 @@ ul {
       width: $arrow-head-width;
       transition-delay: 0.3s;
       transition: all 0.5s;
-      left: 0px;
+      left: 0;
     }
 
     &:before {
@@ -468,23 +469,35 @@ ul {
   }
 }
 
+
 .arrow__right--previous {
+  // display: inline-block;
+  position: absolute;
+    top: 60%;
+    left: 0;
+
+
   >.shaft {
+      // width: $shaft-width;
+      width: 0;
 
     &:before,
     &:after {
       left: 0;
+      // width: $arrow-head-width;
+      width: 0;
     }
 
-    &:before {
-      transform: rotate(40deg);
-      transform-origin: top left;
-    }
+    // &:before {
+    //   transform: rotate(40deg);
+    //   transform-origin: top left;
+    // }
 
-    &:after {
-      transform: rotate(-40deg);
-      transform-origin: bottom left;
-    }
+    // &:after {
+    //   transform: rotate(-40deg);
+    //   transform-origin: bottom left;
+    // } 
+    // might be duplicated css. Dont delete until end.
   }
 }
 
@@ -533,13 +546,13 @@ ul {
 
       >.arrow.arrow__right {
         >.shaft {
-          width: 0;
+          width: 0px;
           transform: translateX(200%);
           transition-delay: 0;
 
           &:before,
           &:after {
-            width: 0;
+            width: 0px;
             transition-delay: 0;
             transition: all 0.1s;
           }
@@ -566,14 +579,11 @@ ul {
       margin: 0 $text-arrow-space 0 0;
       line-height: 1;
     }
-
-    >.arrow {
-      position: relative;
-    }
   }
 }
 
 .animated-arrow--previous {
+
       // >.arrow.arrow__left {
       //   >.shaft {
                   //   &:before {
@@ -586,72 +596,68 @@ ul {
                   //     // transform-origin: bottom left;
                   //   }
                   // }}
-
+    >.main {
+      transform: translateX($shaft-width + $text-arrow-space);
+    }
   &:hover {
 
     >.arrow.arrow__left {
       >.shaft {
+        width: 0px;
+        transform: translateX(200%);
+        transition-delay: 0;
 
         &:before,
         &:after {
-          left: 0px;
+          width: 0px;
+          transition-delay: 0;
+          transition: all 0.1s;
         }
-                  &:before {
-                    transform: rotate(40deg);
-                    transform-origin: top left;
-                  }
+        
+        &:before {
+          transform: rotate(0deg);
+          transform-origin: top left;
+        }
 
-                  &:after {
-                    transform: rotate(-40deg);
-                    transform-origin: bottom left;
-                  }
-
+        &:after {
+          transform: rotate(0deg);
+          transform-origin: bottom left;
+        }
       }
     }
-    >.main {
-      transform: translateX($shaft-width + $text-arrow-space);
 
-      >.arrow.arrow__left {
+    >.main {
+      transform: translateX(0);
+      // transform: translateX($shaft-width + $text-arrow-space);
+
+      >.arrow.arrow__right {
         >.shaft {
-          width: 0;
-          transform: translateX(200%);
+          width: $shaft-width;
+          transform: translateX(100%);
           transition-delay: 0;
 
           &:before,
           &:after {
-            width: 0;
+            width: $arrow-head-width;
             transition-delay: 0;
             transition: all 0.1s;
           }
 
-          // &:before {
-          //   transform: rotate(40deg);
-          //   transform-origin: top left;
-          // }
+          &:before {
+            transform: rotate(40deg);
+            transform-origin: top left;
+          }
 
-          // &:after {
-          //   transform: rotate(-40deg);
-          //   transform-origin: bottom left;
-          // }
+          &:after {
+            transform: rotate(-40deg);
+            transform-origin: bottom left;
+          }
         }
       }
     }
   }
 }
 
-.animated-arrow--previous {
-  >.arrow.arrow__left {
-    >.shaft {
-      &:before {
-        transform: rotate(40deg);
-      }
-
-      &:after {
-        transform: rotate(-40deg);
-      }
-    }
-  }
-}
 
 //////
 //
