fixed positioning of navigation buttons in container

--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -375,11 +375,6 @@ ul {
     // }
   }
 }
-////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////
-//////////////////////////////////////////
-//////////////////////////////////////////
-//////////////////////////////////////////
 
 .arrow__right {
   // top: 1px;
@@ -436,11 +431,6 @@ ul {
     }
   }
 }
-////////////////////////////////////////////////////////
-////////////////////////////////////////////////////////
-//////////////////////////////////////////
-//////////////////////////////////////////
-//////////////////////////////////////////
 
 .arrow__left--previous {
 
@@ -472,9 +462,9 @@ ul {
 
 .arrow__right--previous {
   // display: inline-block;
-  position: absolute;
-    top: 60%;
-    left: 0;
+  // position: absolute;
+    // top: 60%;
+    // left: 0;
 
 
   >.shaft {
@@ -664,3 +654,7 @@ ul {
 // animated arrows end
 //
 //////
+
+// ul, li, a, span {
+//   border: 1px solid red
+// }
