--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -47,112 +47,6 @@ h3 {
   font-size: 1.414em;
 }
 
-
-.navbar-container {
-  transition: 0.4s;
-  position: fixed;
-  top: 0vh;
-  width: 100vw;
-  background-color: rgb(255, 255, 255);
-  z-index: 3;
-}
-
-.navbar-container__width{
-  width: 85vw;
-}
-
-.navbar-container__button {
-  font-family: $heading-font;
-  color: $charcoal;
-  &:hover {
-    color: $fuschia;
-  }
-}
-
-.navbar-container--transition {
-  top: -10vh
-}
-
-@media (min-width: 769px) {
-  .navbar-container {
-    width: 100vw;
-  }
-
-  .navbar__about {
-    text-align: right;
-  }
-
-  .navbar__contact {
-    text-align: left;
-  }
-
-  .navbar-container__width {
-    width: 100vw;
-  }
-}
-
-/////
-//
-// Navbar and Navbar Icon
-//
-/////
-
-
-.navbar-icon-container {
-  position: fixed;
-  top: 0vh;
-  left: 89vw;
-  align-items: center;
-  justify-content: center;
-  z-index: 4;
-  width: 35px;
-  background-color: #ffffff;
-  margin-top: 5px;
-}
-
-@media (min-width: 769px) {
-  .navbar-icon-container {
-    left: 94vw;
-    margin-top: 0px;
-    width: 50px;
-  }
-}
-
-.navbar-icon path {
-  stroke: $charcoal;
-  stroke-width: 5;
-  stroke-linecap: round;
-  transition: all 250ms ease-in-out;
-  transform: rotate(0deg);
-  transform-origin: 50% 50%;
-}
-
-.navbar-icon__button:hover path{
-  stroke: $fuschia;
-}
-
-.navbar-icon.is-active path:nth-child(1) {
-  opacity: 0;
-}
-
-.navbar-icon.is-active path:nth-child(4) {
-  opacity: 0;
-}
-
-.navbar-icon.is-active path:nth-child(2) {
-  transform: rotate(45deg);
-}
-
-.navbar-icon.is-active path:nth-child(3) {
-  transform: rotate(-45deg);
-}
-
-/////
-//
-// Navbar and Navbar Icon End
-//
-/////
-
 #canvas-container {
   margin: auto auto;
 }
@@ -311,401 +205,5 @@ h3 {
   flex: 1;
 }
 
-//////
-//
-// animated arrows
-//
-//////
-
-$text-arrow-space: 16px;
-$shaft-width: 64px;
-$shaft-weight: 1px;
-$arrow-head-width: 8px;
-$arrow-head-weight: $shaft-weight;
-
-
-* {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-ul {
-  padding: 0;
-
-  li {
-    margin: 0 0 24px;
-    list-style-type: none;
-  }
-}
-.arrow {
-  width: $shaft-width;
-  transition: all 0.2s;
-  
-
-  >.shaft {
-    background-color: $charcoal;
-    display: block;
-    height: $shaft-weight;
-    position: relative;
-    transition: all 0.2s;
-    transition-delay: 0;
-    will-change: transform;
-
-    &:before,
-    &:after {
-      background-color: $charcoal;
-      content: '';
-      display: block;
-      height: $arrow-head-weight;
-      position: absolute;
-      top: 0;
-      right: 0;
-      transition: all 0.2s;
-      transition-delay: 0;
-    }
-
-    // &:before {
-    //         // transform-origin: top right;
-
-    // }
-
-    // &:after {
-    //         // transform-origin: bottom right;
-
-    // }
-  }
-}
-
-.arrow__right {
-  // top: 1px;
-  // display: inline-block;
-
-
-  >.shaft {
-    width: $shaft-width;
-    transition-delay: 0.2s;
-
-    &:before,
-    &:after {
-      width: $arrow-head-width;
-      transition-delay: 0.3s;
-      transition: all 0.5s;
-    }
-
-    &:before {
-      transform: rotate(40deg);
-      transform-origin: top right;
-      
-    }
-
-    &:after {
-      transform: rotate(-40deg);
-      transform-origin: bottom right;
-      
-    }
-  }
-}
-.arrow__left {
-  position: absolute;
-  top: 60%;
-  left: 0;
-
-  >.shaft {
-    width: 0;
-    background-color: $charcoal;
-
-    &:before,
-    &:after {
-      width: 0;
-      background-color: $charcoal;
-    }
-
-    &:before {
-      transform: rotate(40deg);
-      transform-origin: bottom left;
-    }
-
-    &:after {
-      transform: rotate(-40deg);
-      transform-origin: bottom left;
-    }
-  }
-}
-
-.arrow__left--previous {
-
-  >.shaft {
-    width: $shaft-width;
-    transition-delay: 0.2s;
-
-
-    &:before,
-    &:after {
-      width: $arrow-head-width;
-      transition-delay: 0.3s;
-      transition: all 0.5s;
-      left: 0;
-    }
-
-    &:before {
-      transform: rotate(40deg);
-      transform-origin: top left;
-    }
-
-    &:after {
-      transform: rotate(-40deg);
-      transform-origin: bottom left;
-    }
-  }
-}
-
-
-.arrow__right--previous {
-    position: absolute;
-    top: 60%;
-    left: $shaft-width;
-
-    >.shaft {
-      width: 0;
-      background-color: $charcoal;
-
-      &:before,
-      &:after {
-        width: 0;
-        background-color: $charcoal;
-      }
-
-      &:before {
-        transform: rotate(40deg);
-        transform-origin: bottom left;
-      }
-
-      &:after {
-        transform: rotate(-40deg);
-        transform-origin: bottom left;
-      }
-    }
-
-  // display: inline-block;
-  // position: absolute;
-    // top: 60%;
-    // left: 0;
-
-//>.shaft {
-      // width: $shaft-width;
-//width: 0;
-
-//&:before,
-//&:after {
-//left: 0;
-// width: $arrow-head-width;
-//width: 0;
-//}
-
-    // &:before {
-    //   transform: rotate(40deg);
-    //   transform-origin: top left;
-    // }
-
-    // &:after {
-    //   transform: rotate(-40deg);
-    //   transform-origin: bottom left;
-    // } 
-    // might be duplicated css. Dont delete until end.
-//}
-}
-
-// Animated Arrow Button
-
-.animated-arrow {
-  display: inline-block;
-  color: $charcoal;
-  font-family: $body-font;
-  font-size: 1.25em;
-  font-style: italic;
-  text-decoration: none;
-  position: relative;
-  transition: all 0.2s;
-
-  &:hover {
-    color: $fuschia;
-
-    >.arrow.arrow__left {
-      >.shaft {
-        width: $shaft-width;
-        transition-delay: 0.1s;
-        background-color: $fuschia;
-
-        &:before,
-        &:after {
-          width: $arrow-head-width;
-          transition-delay: 0.1s;
-          background-color: $fuschia;
-        }
-
-        &:before {
-          transform: rotate(40deg);
-          transform-origin: top right;
-        }
-
-        &:after {
-          transform: rotate(-40deg);
-          transform-origin: bottom right
-        }
-      }
-    }
-
-    >.main {
-      transform: translateX($shaft-width + $text-arrow-space);
-
-      >.arrow.arrow__right {
-        >.shaft {
-          width: 0px;
-          transform: translateX(200%);
-          transition-delay: 0;
-
-          &:before,
-          &:after {
-            width: 0px;
-            transition-delay: 0;
-            transition: all 0.1s;
-          }
-
-          &:before {
-            transform: rotate(0);
-          }
-
-          &:after {
-            transform: rotate(0);
-          }
-        }
-      }
-    }
-  }
-
-
-  >.main {
-    display: flex;
-    align-items: center;
-    transition: all 0.2s;
-
-    >.text {
-      margin: 0 $text-arrow-space 0 0;
-      line-height: 1;
-    }
-  }
-}
-
-.animated-arrow--previous {
-
-      // >.arrow.arrow__left {
-      //   >.shaft {
-                  //   &:before {
-                  //     transform: rotate(0deg);
-                  //     // transform-origin: top left;
-                  //   }
-
-                  //   &:after {
-                  //     transform: rotate(0deg);
-                  //     // transform-origin: bottom left;
-                  //   }
-                  // }}
-    >.main {
-      transform: translateX($shaft-width + $text-arrow-space);
-      width: 125px;
-      >.text {
-              position: relative;
-
-        margin: 0 0 0 $text-arrow-space;
-        left: $shaft-width;
-      }
-    }
-  &:hover {
-
-    // >.arrow.arrow__left {
-    //   >.shaft {
-    //     width: 0px;
-    //     transform: translateX(200%);
-    //     transition-delay: 0;
-
-    //     &:before,
-    //     &:after {
-    //       width: 0px;
-    //       transition-delay: 0;
-    //       transition: all 0.1s;
-    //     }
-        
-    //     &:before {
-    //       transform: rotate(0deg);
-    //       transform-origin: top left;
-    //     }
-
-    //     &:after {
-    //       transform: rotate(0deg);
-    //       transform-origin: bottom left;
-    //     }
-    //   }
-    // }
-          >.arrow.arrow__right--previous {
-      >.shaft {
-        width: $shaft-width;
-        transition-delay: 0.1s;
-        background-color: $fuschia;
-
-        &:before,
-        &:after {
-          width: $arrow-head-width;
-          transition-delay: 0.1s;
-          background-color: $fuschia;
-        }
-
-        &:before {
-          transform: rotate(40deg);
-          transform-origin: top right;
-        }
-
-        &:after {
-          transform: rotate(-40deg);
-          transform-origin: bottom right
-        }
-      }
-          }
-
-
-    >.main {
-      transform: translateX(0);
-      // transform: translateX($shaft-width + $text-arrow-space);
-      >.arrow.arrow__left {
-        >.shaft {
-          width: 0;
-          transform: translateX(100%);
-          transition-delay: 0;
-
-          &:before,
-          &:after {
-            width: 0;
-            transition-delay: 0;
-            transition: all 0.1s;
-          }
-
-          &:before {
-            transform: rotate(40deg);
-            transform-origin: top left;
-          }
-
-          &:after {
-            transform: rotate(-40deg);
-            transform-origin: bottom left;
-          }
-        }
-      }
-    }
-  }
-}
-
-
-//////
-//
-// animated arrows end
-//
-//////
+@import 'carousel-button';
+@import 'navbar';
