finally got it all flipping working. So far as the eye can tell, at least. arrows function correctly. got rid of some redundant css

--- a/source/stylesheets/carousel-button.scss
+++ b/source/stylesheets/carousel-button.scss
@@ -54,13 +54,10 @@ ul {
 .arrow__right {
   >.shaft {
     width: $shaft-width;
-    transition-delay: 0.2s;
 
     &:before,
     &:after {
       width: $arrow-head-width;
-      transition-delay: 0.3s;
-      transition: all 0.5s;
     }
 
     &:before {
@@ -79,6 +76,8 @@ ul {
   position: absolute;
   top: 60%;
   left: $shaft-width;
+  transform: rotateZ(180deg);
+
    
   >.shaft {
     width: 0;
@@ -89,17 +88,6 @@ ul {
       width: 0;
       background-color: $charcoal;
       left: 0;
-      
-    }
-
-    &:before {
-      transform: rotate(40deg);
-      transform-origin: bottom left;
-    }
-
-    &:after {
-      transform: rotate(-40deg);
-      transform-origin: bottom left;      
     }
   }
 }
@@ -133,27 +121,23 @@ ul {
 
 .arrow__left--previous {
     top: inherit;
+    transform: rotateZ(180deg);
 
   >.shaft {
     width: $shaft-width;
-    transition-delay: 0.2s;
 
     &:before,
     &:after {
       width: $arrow-head-width;
-      transition-delay: 0.3s;
-      transition: all 0.5s;
-      left: 0;
+      left: $shaft-width - $arrow-head-width;
     }
 
     &:before {
-      transform: rotate(40deg);
-      transform-origin: top left;
+      transform-origin: bottom right;
     }
 
     &:after {
-      transform: rotate(-40deg);
-      transform-origin: bottom left;
+      transform-origin: bottom right;
     }
   }
 }
@@ -258,7 +242,7 @@ ul {
   &:hover {
 
     >.arrow.arrow__right--previous {
-      left: $shaft-width;
+
       >.shaft {
         width: $shaft-width;
         transition-delay: 0.1s;
@@ -269,16 +253,7 @@ ul {
           width: $arrow-head-width;
           transition-delay: 0.1s;
           background-color: $fuschia;
-        }
-
-        &:before {
-          transform: rotate(40deg);
-          transform-origin: top left;
-        }
-
-        &:after {
-          transform: rotate(-40deg);
-          transform-origin: bottom left
+          left: $shaft-width - $arrow-head-width;
         }
       }
     }
@@ -289,24 +264,15 @@ ul {
       >.arrow.arrow__left {
         >.shaft {
           width: 0;
-          transform: translateX(100%);
+          transform: translateX(200%);
           transition-delay: 0;
 
           &:before,
           &:after {
+            left: 0;
             width: 0;
             transition-delay: 0;
             transition: all 0.1s;
-          }
-
-          &:before {
-            transform: rotate(40deg);
-            transform-origin: top left;
-          }
-
-          &:after {
-            transform: rotate(-40deg);
-            transform-origin: bottom left;
           }
         }
       }
